--- a/.github/workflows/autograde.yaml
+++ b/.github/workflows/autograde.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  contents: read
+  contents: write
   pull-requests: write
 
 jobs:
@@ -136,4 +136,5 @@ jobs:
         uses: peter-evans/enable-pull-request-automerge@v3
         with:
           token: ${{ secrets.GRADER_REPO_TOKEN }}
+          pull-request-number: ${{ github.event.pull_request.number }}
           merge-method: merge
