--- a/.github/workflows/autograde.yaml
+++ b/.github/workflows/autograde.yaml
@@ -40,9 +40,11 @@ jobs:
       - name: Assemble Workspace
         run: |
           mkdir workspace
+          mkdir workspace/student_repo
+          mkdir workspace/student_repo/"${{ github.actor }}_solutions"
           cp -r grader_repo/grader workspace/
           cp -r grader_repo/hidden_tests workspace/
-          cp -r "${{ github.actor }}_solutions" workspace/student_repo
+          cp -r "${{ github.actor }}_solutions" workspace/student_repo/"${{ github.actor }}_solutions"
       # 4️⃣ Validate Repository Structure
       - name: Validate Structure
         run: |
