--- a/.github/workflows/autograde.yaml
+++ b/.github/workflows/autograde.yaml
@@ -43,7 +43,7 @@ jobs:
           mkdir workspace/student_repo
           cp -r grader_repo/grader workspace/
           cp -r grader_repo/hidden_tests workspace/
-          cp -r "${{ github.actor }}_solutions" workspace/student_repo
+          cp -r "${{ github.actor }}_solutions/." workspace/student_repo/
       # 4️⃣ Validate Repository Structure
       - name: Validate Structure
         run: |
