--- a/.github/workflows/autograde.yaml
+++ b/.github/workflows/autograde.yaml
@@ -98,7 +98,8 @@ jobs:
           )
 
           highest_previous = 0
-
+          if response:
+              print(response)
           if response.status_code == 200 and response.json():
               highest_previous = response.json()[0].get("percentage", 0)
 
