--- a/requirements-3.14.2.txt
+++ b/requirements-3.14.2.txt
@@ -38,6 +38,7 @@ numpy==2.4.2
 opencv-python==4.13.0.92
 packaging==26.0
 pandas==2.3.3
+patsy==1.0.2
 pillow==11.3.0
 plotly==6.5.2
 pluggy==1.6.0
@@ -70,6 +71,7 @@ six==1.17.0
 smmap==5.0.2
 soupsieve==2.8.3
 starlette==0.52.1
+statsmodels==0.14.6
 streamlit==1.54.0
 sympy==1.14.0
 tenacity==9.1.4
