--- a/.github/workflows/checkvalidpr.yaml
+++ b/.github/workflows/checkvalidpr.yaml
@@ -49,8 +49,10 @@ jobs:
           mkdir workspace/student_repo
           cp -r grader_repo/grader workspace/
           cp -r grader_repo/hidden_tests workspace/
-          ls
           cp -r "${{ github.event.pull_request.user.login }}_solutions/." workspace/student_repo/
+          ls
+          pwd
+          
 
       # 4️⃣ Validate Repository Structure
       - name: Validate Structure
