--- a/.github/workflows/checkvalidpr.yaml
+++ b/.github/workflows/checkvalidpr.yaml
@@ -64,3 +64,4 @@ jobs:
         env:
              GITHUB_BASE_SHA: ${{ github.event.pull_request.base.sha }}
              GITHUB_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
+             PULL_REQUEST_AUTHOR: ${{ github.event.pull_request.user.login }}
